[maven-release-plugin] prepare release dockerhub-notification-2.2.0