@@ -34,7 +34,7 @@
 
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>dockerhub-notification</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.2.0</version>
     <packaging>hpi</packaging>
 
     <name>CloudBees Docker Hub/Registry Notification</name>
@@ -43,13 +43,14 @@
     <properties>
         <jenkins.version>1.580.1</jenkins.version>
         <java.level>6</java.level>
+        <concurrency>1C</concurrency>
     </properties>
 
     <scm>
         <connection>scm:git:git://git@github.com:jenkinsci/dockerhub-notification-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/dockerhub-notification-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/dockerhub-notification-plugin</url>
-        <tag>HEAD</tag>
+        <tag>dockerhub-notification-2.2.0</tag>
     </scm>
 
     <licenses>
@@ -96,4 +97,23 @@
             <version>2.3</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemProperties>
+                        <property>
+                            <name>hudson.udp</name>
+                            <value>33849</value>
+                        </property>
+                    </systemProperties>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=380m</argLine>
+                    <reuseForks>false</reuseForks>
+                    <forkCount>${concurrency}</forkCount>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
